--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ replay_pid*
 
 *.properties
 src/main/resources/application.properties
+
+src/main/resources/application.properties.dev
+build/resources/main/application.properties
+/build
