--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ develop ]
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -30,9 +30,9 @@ jobs:
 
       - name: Docker Image Build and Push
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
-
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/aldi:${{ github.sha }} .
+          docker tag ${{ secrets.DOCKER_USERNAME }}/petbuddy:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
+          ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE }}
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
